# redis-retrieval-optimizer

./: .gitignore  CLAUDE.md  MCP_SERVER_SPEC.md  Makefile  README.md  RELEASE_NOTES_0.3.0.md  bayes_study.ipynb  bayes_study_config.yaml  bayesian_study_config.yaml  car_grid_study.ipynb  eval_beir.py  example.ipynb  grid_study.ipynb  grid_study.py  grid_study_config.yaml  optimize.py  pyproject.toml  schema.py  scripts.py  study_config.yaml  test.ipynb  utils.py
.github/workflows/: release-drafter.yml  release.yml  test.yml
docs/api/: threshold_optimizer.rst
docs/examples/bayesian_optimization/: 00_bayes_study.ipynb  01_custom_dataset.ipynb  bayes_study_config.yaml  bayesian_study_config.yaml  custom_data_config.yaml
docs/examples/comparison/: 00_comparison.ipynb  comparison.ipynb  comparison_study_config.yaml  comparison_study_results.csv
docs/examples/grid_study/: 00_grid_study.ipynb  01_custom_grid_study.ipynb  custom_grid_study_config.yaml  grid_study.ipynb  grid_study_config.yaml
docs/examples/memory_usage/: memory_usage.ipynb
docs/examples/resources/cars/: car_qrels.json  car_queries.json
docs/examples/resources/custom/: custom_corpus.json  custom_qrels.json  custom_queries.json
docs/examples/search_study/: 00_search_study.ipynb  search_study_config.yaml  search_study_walkthrough.ipynb
docs/examples/threshold_optimization/: 00_threshold_optimization.ipynb
examples/beir/: arguana_dataset.ipynb  cqadupstack_dataset.ipynb  eval_beir.py  fiqa_dataset.ipynb  nfcorpus_dataset.ipynb  output_analysis.ipynb  redis_bm25.py  redis_lin_combo.py  redis_rerank.py  redis_vector.py  redis_weighted_rrf.py  scidocs_dataset.ipynb  scifact_dataset.ipynb  stopwords.py
examples/beir/results/: arguana_results.csv  fiqa_results.csv  nfcorpus_results.csv  scidocs_results.csv  scifact_results.csv
examples/fiqa/: fiqa_optimize.ipynb
redis_retrieval_optimizer/: __init__.py  bayes_study.py  bayesian_optimization_study.py  grid_study.py  mcp_server.py  schema.py  search_study.py  utils.py
redis_retrieval_optimizer/corpus_processors/: eval_beir.py
redis_retrieval_optimizer/memory_usage/: utils.py
redis_retrieval_optimizer/search_methods/: __init__.py  base.py  bm25.py  hybrid.py  hybrid_8_4.py  lin_combo.py  rerank.py  rrf_8_4.py  vector.py  weighted_rrf.py
redis_retrieval_optimizer/threshold_optimization/: __init__.py  base.py  cache.py  router.py  schema.py  utils.py
search_methods/: __init__.py  bm25.py  lin_combo.py  rerank.py  vector.py  weighted_rrf.py
tests/: bayes_study_config.yaml  conftest.py  test.py
tests/integration/: test_bayes.py  test_grid.py  test_grid_from_existing.py  test_memory_stats.py  test_ret_k.py  test_search_methods.py  test_search_study.py  test_threshold_optimizer.py
tests/integration/bayes_data/: test_bayes_study_config.yaml
tests/integration/grid_data/: corpus.json  test_grid_study_config.yaml
tests/integration/search_data/: index_config.yaml  qrels.json  queries.json  test_search_study_config.yaml
tests/integration/vector_data/: corpus.json  qrels.json  queries.json
tests/unit/: test_check_recreate.py  test_cost_fn.py  test_memory_usage_utils.py  test_pr1_schema_fixes.py  test_schema_ret_k.py  test_search_method_inputs.py  test_small_fixes.py  test_study_config_loading.py
tests/unit/threshold_optimization/: test_threshold_optimizer_utility.py
