[tool.poetry]
name = "redis-retrieval-optimizer"
version = "0.1.0"
description = "A tool to help optimize information retrieval with Redis."
authors = [ "Robert Shelton <robert.shelton@redis.com>" ]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
redisvl = ">=0.6.0,<1.0.0"
optuna = ">=4.3.0,<5.0.0"
numpy = ">=1,<2"
pandas = ">=2.2.3,<3.0.0"
sentence-transformers = ">=4.1.0,<5.0.0"
scipy = ">=1.10.0,<2.0.0"
redis = ">=5.0,<6.0"
ranx = ">=0.3.20,<0.4.0"
beir = ">=2.1.0,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
nltk = ">=3.9.1,<4.0.0"
openai = ">=1.78.1,<2.0.0"
google_cloud_aiplatform = {version = ">=1.26.0", optional = true}  # Added for vertexai extra
protobuf = {version = ">=4.21.0", optional = true}  # Added for vertexai extra
cohere = {version = ">=4.0.0", optional = true}  # Added for cohere extra
mistralai = {version = ">=0.0.7", optional = true}  # Added for mistralai extra
voyageai = {version = ">=0.1.0", optional = true}  # Added for voyageai extra
boto3 = {version = ">=1.28.0", optional = true, extras=["bedrock"]}  # Added for bedrock extra


[tool.poetry.group.dev.dependencies]
mypy = "1.9.0"
black = ">=20.8b1"
pylint = "3.1.0"
isort = ">=5.6.4"
pytest-cov = "5.0.0"
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
types-redis = "*"
types-pyyaml = "*"
types-tabulate = "*"
anyio = {extras = ["trio"], version = "^4.4.0"}
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
openai = ["openai"]
sentence-transformers = ["sentence-transformers", "scipy"]
vertexai = ["google_cloud_aiplatform", "protobuf"]
cohere = ["cohere"]
mistralai = ["mistralai"]
voyageai = ["voyageai"]
ranx = ["ranx"]
bedrock = ["boto3"]
nltk = ["nltk"]
