[tool.poetry]
name = "redis-retrieval-optimizer"
version = "0.2.1"
description = "A tool to help optimize information retrieval with the Redis Query Engine."
authors = [ "Robert Shelton <robert.shelton@redis.com>" ]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
redisvl = ">=0.6.0,<1.0.0"
optuna = ">=4.3.0,<5.0.0"
numpy = ">=1,<2"
pandas = ">=2.2.3,<3.0.0"
redis = ">=5.0,<6.0"
ranx = ">=0.3.20,<0.4.0"
beir = ">=2.1.0,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
mypy = "1.9.0"
black = ">=20.8b1"
pylint = "3.1.0"
isort = ">=5.6.4"
pytest-cov = "5.0.0"
pytest-asyncio = "^0.23.7"
pytest = "^8.2.2"
types-redis = "*"
types-pyyaml = "*"
types-tabulate = "*"
anyio = {extras = ["trio"], version = "^4.4.0"}
ipykernel = "^6.29.5"

[tool.poetry.scripts]
format = "scripts:format"
check-format = "scripts:check_format"
sort-imports = "scripts:sort_imports"
check-sort-imports = "scripts:check_sort_imports"
check-lint = "scripts:check_lint"
check-mypy = "scripts:check_mypy"
test = "scripts:test"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
