[project]
name = "redis-retrieval-optimizer"
version = "0.5.0"
description = "A tool to help optimize information retrieval with the Redis Query Engine."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Robert Shelton", email = "robert.shelton@redis.com" },
]

dependencies = [
  "redisvl>=0.13.0",
  "optuna>=4.3.0,<5.0.0",
  "numpy>=1.26,<3.0.0",
  "pandas>=2.0,<3.0.0",
  "redis>=7.1.0",
  "ranx>=0.3.20,<0.4.0",
  "beir>=2.1.0,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "nltk>=3.9.1,<4.0.0",
  "ulid>=1.1",
]

[project.scripts]
format = "scripts:format"
check-format = "scripts:check_format"
sort-imports = "scripts:sort_imports"
check-sort-imports = "scripts:check_sort_imports"
check-lint = "scripts:check_lint"
check-mypy = "scripts:check_mypy"
test = "scripts:test"

[dependency-groups]
dev = [
  "mypy==1.9.0",
  "black>=20.8b1",
  "pylint==3.1.0",
  "isort>=5.6.4",
  "pytest-cov==5.0.0",
  "pytest-asyncio>=0.23.7,<0.24.0",
  "pytest>=8.2.2,<9.0.0",
  "types-redis",
  "types-pyyaml",
  "types-tabulate",
  "anyio[trio]>=4.4.0,<5.0.0",
  "ipykernel>=6.29.5,<7.0.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
